# oracles

./: .gitignore  .gitmodules  Linear.hs  Makefile  README.md  about-programming-languages-intro.md  bce.cabal  checklist.md  driver.tex  kolejne-notatki.md  main.hs  notes.md  notes.txt  run.sh  tex-check.sh
app/: Main.hs
arch/: 2024-04-04-what-is-a-programming-language.md
automated-reasoning/: README.md
chapters/: appendix-neergaard-algebra.tex  appendix-strength-of-metatheory.tex  appendix-uniformity.bib  appendix-uniformity.tex  bounded-arithmetic.bib  bounded-arithmetic.tex  circuits.bib  circuits.tex  curry-howard.tex  descriptive-complexity.bib  descriptive-complexity.tex  formalized-semantics.bib  formalized-semantics.tex  foundations.bib  foundations.tex  icc-linear-logic.bib  icc-linear-logic.tex  icc-recursion-theory.bib  icc-recursion-theory.tex  icc.bib  icc.tex  introduction.tex  linear-logic.bib  linear-logic.tex  linear-type-systems.tex  logic.bib  logic.tex  logspace.bib  logspace.tex  prehistory-icc.bib  prehistory-icc.tex  preliminaries-circuits.tex  preliminaries-single-sorted-logic.bib  preliminaries-single-sorted-logic.tex  preliminaries-turing-complexity.bib  preliminaries-turing-complexity.tex  preliminaries-two-sorted-logic.bib  preliminaries-two-sorted-logic.tex  preliminaries.tex  recursion-theory.bib  (+6 more)
circuit-drawing/: example.json  index.html  script.js  styles.css
code-snapshot/: roq-fol-proof-mode.v
complete-problems/: .gitignore  CookNguyen.dfy  Main.dfy  Makefile  binsearch.dfy  circuit-value-problem.dfy  cook-nguyen.dfy  (+3 more)
(+312 files in other folders)
