cabal-version:      2.4
name:               bce
version:            0.1.0.0
author:             Paweł Balawender
maintainer:         p.balawender@mimuw.edu.pl
executable bce
    main-is:          Main.hs
    build-depends:
        base,
        mtl,
        transformers,
        QuickCheck
    hs-source-dirs:   app
    default-language: Haskell2010
